Bug 757618 - Closing window while in Lion fullscreen mode leaves one on blank screen for 10-15 seconds. r=bgirard a=akeybl